snart klar med alla tester 1 kvar